reduce font size, make left alignment on correct element.

--- a/site/styles/_footer.scss
+++ b/site/styles/_footer.scss
@@ -62,7 +62,9 @@ footer {
   @include media-breakpoint-up(xl) {
     justify-content: start;
     margin: 0 50px 20px;
-    text-align: left;
+    .s72-btn {
+      text-align: left;
+    }
   }
 
   .s72-btn {
@@ -72,7 +74,7 @@ footer {
 
     i {
       color: var(--body-color);
-      font-size: 32px;
+      font-size: 25px;
 
       &:hover {
         color: var(--body-color-hover);
